# sequalizer

./: main.py  pyproject.toml
docs/: DESIGN.md  EXERCISES.md
src/sequalizer/: app.py  database.py
