[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sequalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.52",
    "pygments>=2.19.2",
    "rich>=14.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sequalizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
